--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title> Art </title>
+  
+<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -18,7 +20,7 @@
   </heder>
  <main>
    <section>
-     <h3>
+     <h3
        Welcome to my website
      </h3>
      <p>
@@ -37,6 +39,13 @@
  <footer>
    <p>copy right 2021</p>
  </footer>
- 
+ <script>
+var userName = prompt("whats your name ?")
+
+alert('Welcome to my website')
+
+alert('do you Want to continue')   
+
+ </script>
 </body>
 </html>
